GearsetPOC/force-app/main/default/objects/Chat_Log__c/Chat_Log__c.object-meta.xml
<CustomObject>
    <label>Chat Log</label>
    <nameField>
        <label>Chat Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>