GearsetPOC/force-app/main/default/objects/Chat_Log__c/fields/Chat_key__c.field-meta.xml
<CustomField>
    <fullName>Chat_key__c</fullName>
    <label>Chat key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>