GearsetPOC/force-app/main/default/objects/Chat_Log__c/fields/TimeMessage__c.field-meta.xml
<CustomField>
    <fullName>TimeMessage__c</fullName>
    <label>TimeMessage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>