GearsetPOC/force-app/main/default/objects/Chat_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp of chat message</description>
    <inlineHelpText>Timestamp of chat message</inlineHelpText>
    <label>Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>