GearsetPOC/force-app/main/default/objects/Chat_Log__c/fields/TypeChatLog__c.field-meta.xml
<CustomField>
    <fullName>TypeChatLog__c</fullName>
    <label>TypeChatLog</label>
    <length>50</length>
    <type>Text</type>
</CustomField>